--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@augustsson/width-modifier",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Script to listen to all elements implementing the property width-modifier to check for width",
   "main": "./width-modifier.js",
   "files": [
@@ -13,5 +13,9 @@
     "example": "example"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@gitlab.udev.se:open-source/width-modifier.git"
+  }
 }
